# cot-scheduling

./: .gitattributes  .gitignore  README.md  pyproject.toml
cot/: __init__.py  create_instances.py  evaluate_responses.py  generate_prompts.py  prompt_generation.py  query_llms.py  response_generation.py  sample_evaluation.py  utils.py
cot/domain_utils/: __init__.py  coinflip.py  color_verification.py  digitester.py  domain.py  fib.py  lastletterconcat.py  modarith.py  pemdas.py  sorting.py
data/evaluations/coinflip/: evaluations.json
data/evaluations/digitester/: evaluations.json
data/evaluations/fib/: evaluations.json
data/evaluations/lastletterconcat/: evaluations.json
data/evaluations/sorting/: evaluations.json
data/examples/coinflip/: examples.json
data/examples/lastletterconcat/: examples.json
data/examples/pemdas/: examples.json
data/examples_1/lastletterconcat/: examples_1.json
data/examples_10/lastletterconcat/: examples_10.json
data/examples_11/lastletterconcat/: examples_11.json
data/examples_12/lastletterconcat/: examples_12.json
data/examples_13/lastletterconcat/: examples_13.json
data/examples_14/lastletterconcat/: examples_14.json
data/examples_15/lastletterconcat/: examples_15.json
data/examples_16/lastletterconcat/: examples_16.json
data/examples_17/lastletterconcat/: examples_17.json
data/instances/fib/: instances.json
domain_utils/: color_verification.py  domain.py
examples/color_verification/: example_basic-1.col
scripts/: convert_prompt_key.py  tag_insertion.py  test_one_digit_mapping.py  test_pemdas_chain.py
(+34 files in other folders)
