[tool.poetry]
name = "cot"
version = "0.1.0"
description = "Pipeline for testing chain-of-thought generalization in SoTA LLMs."
authors = ["kstechly <kayastechly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grinpy = "^19.7a0"
argparse = "^1.4.0"
tqdm = "^4.66.4"
openai = "^1.25.1"
tiktoken = "^0.6.0"
fire = "^0.6.0"
pandas = "^2.2.2"
rich = "^13.7.1"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
pyqt6 = "^6.7.0"
levenshtein = "^0.25.1"
textdistance = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
